--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,5 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
+    <item
+        android:id="@+id/action_refresh"
+        android:title="@string/refresh_action"
+        android:orderInCategory="1"
+        app:showAsAction="ifRoom"
+    />
 </menu>
